--- a/diary.html
+++ b/diary.html
@@ -51,7 +51,7 @@
                             <span>세희으i 추억ฺ 상ㅈr...♥ ʕっ•ﻌ•ʔっ ♡L</span>
                         </div>
                         <div class="URL_box_in_TOP visit-URL_font_style">
-                            <a>http://url주소/나중에입력</a>
+                            <a href="https://julia8024.github.io/2021-Sehee-mini-hompage/home.html"><i class="fas fa-home"></i></a>
                         </div>
                     </div>
                     <div class="C_MAIN_box_in_diary box_white z_index_20">
