--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./static/2_layout_style.css"/>
     <link rel="stylesheet" href="./static/3_design_style.css"/>
     <link rel="stylesheet" href="./static/4_gallery_style.css"/>
+    <script src="https://kit.fontawesome.com/66ae39e275.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="grid_background">
@@ -50,7 +51,7 @@
                             <span>세희으i 추억ฺ 상ㅈr...♥ ʕっ•ﻌ•ʔっ ♡L</span>
                         </div>
                         <div class="URL_box_in_TOP visit-URL_font_style">
-                            <a>http://url주소/나중에입력</a>
+                            <a href="https://julia8024.github.io/2021-Sehee-mini-hompage/home.html"><i class="fas fa-home"></i></a>
                         </div>
                     </div>
                     <div class="C_MAIN_box_in_photo_gallery box_white z_index_20">
